--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=caching
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
+spring.redis.password=${REDIS_PASSWORD}
